# klangstrom-libraries

./: .clang-format  .gitignore  .gitmodules  CODING-STYLE.md  KLST--firmware_coding_style-formatter.xml  README.md  ROADMAP.md
Klangstrom/: CMakeLists.txt  library.properties
Klangstrom/examples/AudioCodec/: AudioCodec.ino
Klangstrom/examples/ClockCyclesAndTicks/: ClockCyclesAndTicks.ino
Klangstrom/examples/DACADC/: DACADC.ino
Klangstrom/examples/Display/: Display.ino
Klangstrom/examples/Drawable/: Drawable.ino
Klangstrom/examples/InternalMicrophone/: InternalMicrophone.ino
Klangstrom/examples/Key/: Key.ino
Klangstrom/examples/Microphone/: Microphone.ino
Klangstrom/examples/RotaryEncoder/: RotaryEncoder.ino
Klangstrom/examples/SDCard/: SDCard.ino
Klangstrom/examples/SDCardAudioStream/: AudioStreamFloat32.h  SDCardAudioStream.ino
Klangstrom/examples/SerialDevice/: SerialDevice.ino
Klangstrom/examples/Test/: Test.ino
Klangstrom/examples/TestCleanCaterpillar/: TestCleanCaterpillar.ino
Klangstrom/examples/TestFunctions/: TestFunctions.ino
Klangstrom/examples/TestSDCard/: TestSDCard.ino
Klangstrom/examples/USBDeviceKeyboard/: USBDeviceKeyboard.ino
Klangstrom/examples/advanced/AudioCodecKlangwellen/: AudioCodecKlangwellen.ino
Klangstrom/examples/advanced/AudioSDCardPlayWAVFile/: AudioSDCardPlayWAVFile.ino
Klangstrom/examples/advanced/AudioSDCardStreamRaw/: AudioSDCardStreamRaw.ino
Klangstrom/examples/advanced/AudioSDCardStreamWAV/: AudioSDCardStreamWAV.ino
Klangstrom/examples/advanced/DisplayAnimation/: DisplayAnimation.ino  KLST--ICON--128x128.h
Klangstrom/examples/advanced/DrawText/: DrawText.ino
Klangstrom/examples/advanced/PlayWAVFile/: PlayWAVFile.ino  WAVE.cpp  WAVE.h
Klangstrom/examples/advanced/SDCardAudioStream/: AudioStreamFloat32.h
Klangstrom/examples/advanced/UID/: UID.ino
Klangstrom/examples/basic/AudioCodec/: AudioCodec.ino  MWavetable.h  Wavetable.h
Klangstrom/examples/basic/Beat/: Beat.ino
Klangstrom/examples/basic/BeatAndTimer/: BeatAndTimer.ino
Klangstrom/examples/basic/Console/: Console.ino
Klangstrom/examples/basic/DACADC/: DACADC.ino
Klangstrom/examples/basic/Display/: Display.ino
Klangstrom/examples/basic/IDC/: IDC.ino
Klangstrom/examples/basic/Key/: Key.ino
Klangstrom/examples/basic/LED/: LED.ino
Klangstrom/examples/basic/MIDI/: MIDI.ino
Klangstrom/examples/basic/Microphone/: Microphone.ino
Klangstrom/examples/connection-club/ADCClickTrack/: ADCClickTrack.ino  (+1 more)
Klangstrom/src/: ArrayList.h  AudioBlock.h  AudioCodec.cpp  AudioCodec.h  AudioDevice.cpp  AudioDevice.h  AudioInfo.h  Beat.cpp  Beat.h  CallbackDefinitions.h  Console.cpp  Console.h  DACADC.cpp  DACADC.h  Display.cpp  Display.h  DisplayDrawInterface.h  Draw.cpp  Draw.h  Encoder.cpp  Encoder.h  FT5206.cpp  GPIOListener.h  InternalMicrophone.cpp  InternalMicrophone.h  KLST-MechanicalKey.cpp  KLST-MechanicalKey.h  KLST-Peripherals.cpp  KLST-Peripherals.h  KLST.cpp  KLST.h  KLSTFont.h  KLSTFont_5x8.h  KLST_PANDA-ADCDAC.c  KLST_PANDA-ADCDAC.h  KLST_PANDA-AudioCodec.c  KLST_PANDA-AudioCodec.h  KLST_PANDA-Backlight.c  KLST_PANDA-Backlight.h  KLST_PANDA-Config.h  (+83 more)
Klangstrom/tools/: generate-klangstrom-environment-h.py
Klangstrom_Emulator/: CMakeLists.txt  library.properties
Klangstrom_Emulator/src/: ArduinoFunctions.cpp  ArduinoFunctions.h  Drawable.h  KLST_EMU_PANDA_Peripheral_Defines.h  KLST_EMU_adapter.cpp  KlangstromEmulator.cpp  KlangstromEmulator.h  KlangstromEmulatorAudioDevice.cpp  KlangstromEmulatorAudioDevice.h  KlangstromEmulatorClient.h  KlangstromEnvironment.h  PApplet.h  PeriodicalTask.h  stm32.h  stm32_hal.cpp  stm32_hal.h  stm32_hal_callbacks.c  stm32_hal_callbacks.h
Klangstrom_Emulator/standalone/: CMakeLists.txt
Klangstrom_Emulator/standalone/src/: SketchAudioOscillatorPassthrough.cpp  SketchAudioWAV.cpp  SketchAudioWAVE.cpp  SketchAudioWAVStream.cpp  TestSketch.cpp
Klangstrom_KLST_EMU/: CMakeLists.txt  library.properties
Klangstrom_KLST_EMU/src/: AudioDevice_ASP_EMU.cpp  AudioDevice_ASP_EMU.h  AudioDevice_EMU.cpp  AudioDevice_EMU.h  Console_ASP_EMU.cpp  Console_EMU.cpp  Display_EMU.cpp  Encoder_EMU.cpp  Encoder_EMU.h  HAL_ASP_EMU.cpp  HAL_ASP_EMU.h  HardwareTimer.h  Key_EMU.cpp  Key_EMU.h  KlangstromAudioCodec_BSP_KLST_EMU.cpp  KlangstromConfiguration.h  KlangstromEmulatorClient.cpp  KlangstromLEDs_BSP_KLST_EMU.cpp  KlangstromSerialDebug_BSP_KLST_EMU.cpp  Klangstrom_BSP_KLST_EMU.cpp  Klangstrom_BSP_KLST_EMU.h  LED_ASP_EMU.cpp  LED_EMU.cpp  Microphone_EMU.cpp  PeripheralConfiguration_ASP_EMU.h  PeripheralConfiguration_EMU.h  PeripheralConfiguration_KLST_CATERPILLAR_EMU.h  PeripheralConfiguration_KLST_PANDA_EMU.h  SDCard_ASP_EMU.cpp  SDCard_EMU.cpp  SerialDevice_ASP_EMU.cpp  SerialDevice_EMU.cpp  System_ASP_EMU.cpp  System_ASP_EMU.h  System_EMU.cpp  System_EMU.h  Timer_EMU.cpp  Timer_EMU.h  stm32.h  stm32_hal.cpp  (+1 more)
Klangstrom_KLST_PANDA_STM32/: CMakeLists.txt  library.properties
Klangstrom_KLST_PANDA_STM32/src/: AudioCodec_ASP_STM32.cpp  AudioCodec_ASP_STM32.h  AudioCodec_BSP_KLST_PANDA.cpp  AudioDevice_ASP_STM32.cpp  AudioDevice_ASP_STM32.h  AudioDevice_BSP_KLST_PANDA.cpp  AudioDevice_BSP_KLST_PANDA_CATERPILLAR.cpp  AudioDevice_KLST_PANDA_CATERPILLAR.cpp  AudioDevice_STM32.cpp  AudioDevice_STM32.h  Console_ASP_STM32.cpp  Console_BSP_KLST_PANDA.cpp  Console_BSP_KLST_PANDA_CATERPILLAR.cpp  Console_KLST_PANDA_CATERPILLAR.cpp  Console_STM32.cpp  DACADC_KLST_PANDA.cpp  DACADC_STM32.cpp  DMAMemoryAllocator.c  DMAMemoryAllocator.cpp  DMAMemoryAllocator.h  DisplayBacklight_KLST_PANDA.cpp  DisplayDMA2DDrawLibrary.cpp  DisplayDMA2DDrawLibrary.h  DisplayDrawLibrary.cpp  DisplayDrawLibraryLegacy.cpp  DisplayDrawLibrary_DAM2D.cpp  DisplayDrawLibrary_DMA2D_STM32.cpp  DisplayDrawLibrary_DMA2D_STM32.h  DisplayDrawLibrary_HALDMA2D.cpp  DisplayDrawLibrary_RAWDMA2D.cpp  DisplayDraw_DAM2D_KLST_PANDA.cpp  DisplayDraw_Software.cpp  DisplayLTDC_KLST_PANDA.cpp  DisplayTouch_BSP_KLST_PANDA.cpp  DisplayTouch_KLST_PANDA.cpp  Display_BSP_KLST_PANDA.cpp  Display_KLST_PANDA.cpp  Display_KLST_PANDA.h  Encoder_STM32.cpp  Encoder_STM32.h  (+63 more)
(+505 files in other folders)
